--- a/conf/config.yml
+++ b/conf/config.yml
@@ -10,7 +10,7 @@ redis:
 mysql:
     host: 127.0.0.1
     port: 3306
-    user: alan
+    username: alan
     passwd: M7auDkfa
     database: todo_list_db
     charset: utf8mb4
